<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_deck"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share_deck"
        app:showAsAction="never" />
<!--    <item-->
<!--        android:id="@+id/action_reset_progress"-->
<!--        android:icon="@drawable/ic_refresh"-->
<!--        android:title="@string/reset_progress"-->
<!--        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_deck"
        app:showAsAction="never" />
</menu>